# e2e-gpt2-with-jax

./: README.md  gpt2-work-nb.ipynb  pyproject.toml
gpt2/: base.py  config.py
notes/: 01-config.md  02-embeddings.md  03-attention-and-transformer.md
